2008-08-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoHTMLMailBodyPart.[hm]: new class module
	implementing the HTML content body parts.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([UIxMailPartExternalHTMLViewer -init]): new class derived from
	UIxMailPartHTMLViewer but which as as a full page wrapper.

2008-08-22  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Modified SoObjects/Mailer/NSData+Mail.m
	-decodedSubject so we correctly implement decoding
	instead of relying on the broken SOPE implementation.

2008-08-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* SoObjects/SOGo/LDAPUserManager.m
	Renamed the SOGOLDAPUserManagerCleanupInterval defaults to
	SOGoLDAPUserManagerCleanupInterval.
	We correctly add our timer to the runloop and fixed
	a typo in the selector name.

2008-08-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSString+Utilities.m ([NSString
	-caseInsensitiveMatches:match]): new method that helps matching
	strings against patterns.

2008-08-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Updated the icons to use those from Thunderbird 2
	and from Lightning 0.9. Also added those new files :

	UI/WebServerResources/tbtv_account_17x17.png
	UI/WebServerResources/tbtv_drafts_17x17.png
	UI/WebServerResources/tbtv_inbox_17x17.png
	UI/WebServerResources/tbtv_leaf_corner_17x17.png
	UI/WebServerResources/tbtv_sent_17x17.png
	UI/WebServerResources/tbtv_trash_17x17.png

	Dropped :

	UI/WebServerResources/tbtv_account_17x17.gif
	UI/WebServerResources/tbtv_drafts_17x17.gif
	UI/WebServerResources/tbtv_inbox_17x17.gif
	UI/WebServerResources/tbtv_leaf_corner_17x17.gif
	UI/WebServerResources/tbtv_sent_17x17.gif
	UI/WebServerResources/tbtv_trash_17x17.gif
	
2008-08-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/PreferencesUI/UIxAdditionalPreferences.[hm]: new template
	class that enables the user to append links or other infos needed
	to change preferences not handled by SOGo. The tab will display