@@ -1,5 +1,9 @@
 2008-08-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/Contacts/SOGoContactLDIFEntry.m ([SOGoContactLDIFEntry
+	-vCard]): replaced query for field "notes" with "description".
+	Added support for Mozilla custom fields 1 to 4.
+
 	* SoObjects/Mailer/SOGoHTMLMailBodyPart.[hm]: new class module
 	implementing the HTML content body parts.
 
